# dodiplate

./: .env  .gitignore  Cargo.toml  README.md  boilerplates.json
src/: boilerplate.rs  main.rs  utils.rs
