[package]
name = "dodiplate"
version = "1.0.0"
edition = "2018"
readme = "README.md"
authors = ["Mohammed Ali Agha <mtxshiftg@gmail.com>"]
license = "Unlicense"
description = "A tool to clone boilerplate project files from any git repository"
repository = "https://github.com/dodiameer/dodiplate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.13.20"
remove_dir_all = "0.7.0"
home = "0.5.3"
